pgpvis-core/tests/snapshots/pgpvis_core__convert__tests__sig_subpkt_signature_key_flags_2_zeroed.snap
---
source: pgpvis-core/src/convert.rs
expression: value
---
offset: 0
length: 3
inner:
  length:
    offset: 0
    length: 1
    inner:
      One: 0
  type_id:
    offset: 1
    length: 1
    inner:
      critical: true
      type_id: ~
  data:
    offset: 2
    length: 1
    inner:
      KeyFlags:
        offset: 2
        length: 1
        inner:
          - offset: 2
            length: 1
            inner: 191
          - offset: 3
            length: 1
            inner: 0
