pgpvis-core/tests/snapshots/pgpvis_core__convert__tests__sig_subpkt_signature_key_server_preferences.snap
---
source: pgpvis-core/src/convert.rs
expression: value
---
offset: 0
length: 1
inner:
  KeyServerPreferences:
    offset: 0
    length: 1
    inner:
      offset: 0
      length: 1
      inner: 128
