pgpvis-core/tests/snapshots/pgpvis_core__convert__tests__sig_subpkt_signature_notation_data.snap
---
source: pgpvis-core/src/convert.rs
expression: value
---
offset: 0
length: 5
inner:
  NotationData:
    flags:
      offset: 0
      length: 1
      inner: 2147483648
    name_length:
      offset: 1
      length: 1
      inner: 15
    value_length:
      offset: 2
      length: 1
      inner: 8
    name:
      offset: 3
      length: 1
      inner: foo@example.com
    value:
      offset: 4
      length: 1
      inner:
        - 68
        - 69
        - 65
        - 68
        - 66
        - 69
        - 69
        - 70
